--- a/Artist.html
+++ b/Artist.html
@@ -27,10 +27,12 @@
                     <button type = "button" class = " icon btn position-relative btn-outline-secondary">
                         <i class = "fa fa-search"></i>
                     </button>
-                    <button type = "button" class = " icon btn position-relative btn-outline-secondary ">
-                        <i class = "fa fa-shopping-cart"></i>
-                        <span class = "position-absolute top-0 start-100 translate-middle badge ">5</span>
-                    </button>
+
+                    <a href="cart.html">
+                        <button type = "button" class = "icon btn position-relative btn-outline-secondary">
+                            <i class = "fa fa-shopping-cart"></i>
+                        </button>
+                    </a>
                     <a href="login.html">
                         <button type = "button" class = "icon btn position-relative btn-outline-secondary">
                             <i class = "fa fa-user"></i>
@@ -55,14 +57,18 @@
                             <a class = "nav-link text-uppercase text-white rounded-pill" href = "ArtistList.html">Artist list</a>
                         </li>
                         <li class = "nav-item px-2 py-2">
-                            <a class = "nav-link text-uppercase text-white rounded-pill" href = "membership.html">Membership</a>
+                        <a class = "nav-link text-uppercase text-white rounded-pill" href = "membership.html">Membership</a>
                         </li>
                         <li class = "nav-item px-2 py-2">
                             <a class = "nav-link text-uppercase text-white rounded-pill" href = "about-us.html">About us</a>
                         </li>
+                        <li class = "nav-item px-2 py-2">
+                            <a class = "nav-link text-uppercase text-white rounded-pill" href = "contact_us.html">Contact us</a>
+                        </li>
                     </ul>
                 </div>
             </div>
+        </nav>
         </nav>
     </header>
 
@@ -72,7 +78,7 @@
             <div class="container1">
                 <div class="disk-information">
                     <h2>ARTIST</h2>
-                    <h3>Ca sĩ / Nhạc sĩ</h3>
+                    <h3>Singer/Songwriter</h3>
                     <div class="info-item">
                         <label>FULL NAME :</label>
                         <span>NGUYEN THANH TUNG</span>
@@ -117,96 +123,101 @@
 
         </main>
 
-
-    <footer class = "bg-dark py-5">
-        <div class = "container">
-            <div class = "row text-white g-4">
-                <div class = "col-md-6 col-lg-3">
-                    <a class = "text-uppercase text-decoration-none brand text-white" href = "index.html">Rhythm house</a>
-                    <p class = "text-white  mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum mollitia quisquam veniam odit cupiditate, ullam aut voluptas velit dolor ipsam?</p>
-                </div>
-                <div class = "col-md-6 col-lg-3">
-                    <h5 class = "fw-light">Links</h5>
-                    <ul class = "list-unstyled">
-                        <li class = "my-3">
-                            <a href = "#" class = "text-white text-decoration-none">
-                                <i class = "fas fa-chevron-right me-1"></i> Home
-                            </a>
-                        </li>
-                        <li class = "my-3">
-                            <a href = "#" class = "text-white text-decoration-none t">
-                                <i class = "fas fa-chevron-right me-1"></i> Product
-                            </a>
-                        </li>
-                        <li class = "my-3">
-                            <a href = "#" class = "text-white text-decoration-none">
-                                <i class = "fas fa-chevron-right me-1"></i> Event
-                            </a>
-                        </li>
-                        <li class = "my-3">
-                            <a href = "#" class = "text-white text-decoration-none">
-                                <i class = "fas fa-chevron-right me-1"></i> Membership
-                            </a>
-                        </li>
-                        <li class = "my-3">
-                            <a href = "#" class = "text-white text-decoration-none">
-                                <i class = "fas fa-chevron-right me-1"></i> About Us
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-                <div class = "col-md-6 col-lg-3">
-                    <h5 class = "fw-light mb-3">Contact Us</h5>
-                    <div class = "d-flex justify-content-start align-items-start my-2">
-                        <span class = "me-3">
-                            <i class = "fas fa-map-marked-alt"></i>
-                        </span>
-                        <span class = "fw-light">
-                           8A,Ton That Huyet,HaNoi
-                        </span>
+        <footer class = "bg-dark py-5">
+            <div class = "container">
+                <div class = "row text-white g-4">
+                    <div class = "col-md-6 col-lg-3">
+                        <a class = "text-uppercase text-decoration-none brand text-white" href = "index.html">Rhythm house</a>
+                        <p class = "text-white  mt-3">Rhythm House-Where Passion for Vinyl Connects</p>
                     </div>
-                    <div class = "d-flex justify-content-start align-items-start my-2">
-                        <span class = "me-3">
-                            <i class = "fas fa-envelope"></i>
-                        </span>
-                        <span class = "fw-light">
-                            Rhythm.support@gmail.com
-                        </span>
-                    </div>
-                    <div class = "d-flex justify-content-start align-items-start my-2d">
-                        <span class = "me-3">
-                            <i class = "fas fa-phone-alt"></i>
-                        </span>
-                        <span class = "fw-light">
-                            +849999999
-                        </span>
-                    </div>
-                </div>
-                <div class = "col-md-6 col-lg-3">
-                    <h5 class = "fw-light mb-3">Follow Us</h5>
-                    <div>
-                        <ul class = "list-unstyled d-flex">
-                            <li>
-                                <a href = "#" class = "text-white text-decoration-none  fs-4 me-4"><i class = "fab fa-facebook-f"></i> </a>
+                    <div class = "col-md-6 col-lg-3">
+                        <h5 class = "fw-light">Links</h5>
+                        <ul class = "list-unstyled">
+                            <li class = "my-3">
+                                <a href = "#" class = "text-white text-decoration-none">
+                                    <i class = "fas fa-chevron-right me-1"></i> Home
+                                </a>
                             </li>
-                            <li>
-                                <a href = "#" class = "text-white text-decoration-none  fs-4 me-4"><i class = "fab fa-twitter"></i></a>
+                            <li class = "my-3">
+                                <a href = "#" class = "text-white text-decoration-none t">
+                                    <i class = "fas fa-chevron-right me-1"></i> Product
+                                </a>
                             </li>
-                            <li>
-                                <a href = "#" class = "text-white text-decoration-none fs-4 me-4"><i class = "fab fa-instagram"></i></a>
+                            <li class = "my-3">
+                                <a href = "#" class = "text-white text-decoration-none">
+                                    <i class = "fas fa-chevron-right me-1"></i> Event
+                                </a>
+                            </li>
+                            <li class = "my-3">
+                                <a href = "#" class = "text-white text-decoration-none">
+                                    <i class = "fas fa-chevron-right me-1"></i> Membership
+                                </a>
+                            </li>
+                            <li class = "my-3">
+                                <a href = "#" class = "text-white text-decoration-none">
+                                    <i class = "fas fa-chevron-right me-1"></i> About Us
+                                </a>
+                            </li>
+                            <li class = "my-3">
+                                <a href = "#" class = "text-white text-decoration-none">
+                                    <i class = "fas fa-chevron-right me-1"></i> Contact Us
+                                </a>
                             </li>
                         </ul>
                     </div>
-                </div>
-                <hr class="mb-4">
-                <div class="row align-items-center">
-                  <div class="text-center">
-                    <p>Copyright @Group3</p>
-                  </div>
+                    <div class = "col-md-6 col-lg-3">
+                        <h5 class = "fw-light mb-3">Contact Us</h5>
+                        <div class = "d-flex justify-content-start align-items-start my-2">
+                            <span class = "me-3">
+                                <i class = "fas fa-map-marked-alt"></i>
+                            </span>
+                            <span class = "fw-light">
+                               8A,Ton That Huyet,HaNoi
+                            </span>
+                        </div>
+                        <div class = "d-flex justify-content-start align-items-start my-2">
+                            <span class = "me-3">
+                                <i class = "fas fa-envelope"></i>
+                            </span>
+                            <span class = "fw-light">
+                                Rhythm.support@gmail.com
+                            </span>
+                        </div>
+                        <div class = "d-flex justify-content-start align-items-start my-2d">
+                            <span class = "me-3">
+                                <i class = "fas fa-phone-alt"></i>
+                            </span>
+                            <span class = "fw-light">
+                                +849999999
+                            </span>
+                        </div>
+                    </div>
+                    <div class = "col-md-6 col-lg-3">
+                        <h5 class = "fw-light mb-3">Follow Us</h5>
+                        <div>
+                            <ul class = "list-unstyled d-flex">
+                                <li>
+                                    <a href = "#" class = "text-white text-decoration-none  fs-4 me-4"><i class = "fab fa-facebook-f"></i> </a>
+                                </li>
+                                <li>
+                                    <a href = "#" class = "text-white text-decoration-none  fs-4 me-4"><i class = "fab fa-twitter"></i></a>
+                                </li>
+                                <li>
+                                    <a href = "#" class = "text-white text-decoration-none fs-4 me-4"><i class = "fab fa-instagram"></i></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <hr class="mb-4">
+                    <div class="row align-items-center">
+                      <div class="text-center">
+                        <p>Copyright @Group3</p>
+                      </div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </footer>
+        </footer>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 
 </html>
