--- a/membership.html
+++ b/membership.html
@@ -22,10 +22,12 @@
                     <button type = "button" class = " icon btn position-relative btn-outline-secondary">
                         <i class = "fa fa-search"></i>
                     </button>
-                    <button type = "button" class = " icon btn position-relative btn-outline-secondary ">
-                        <i class = "fa fa-shopping-cart"></i>
-                        <span class = "position-absolute top-0 start-100 translate-middle badge ">5</span>
-                    </button>
+
+                    <a href="cart.html">
+                        <button type = "button" class = "icon btn position-relative btn-outline-secondary">
+                            <i class = "fa fa-shopping-cart"></i>
+                        </button>
+                    </a>
                     <a href="login.html">
                         <button type = "button" class = "icon btn position-relative btn-outline-secondary">
                             <i class = "fa fa-user"></i>
@@ -50,10 +52,13 @@
                             <a class = "nav-link text-uppercase text-white rounded-pill" href = "ArtistList.html">Artist list</a>
                         </li>
                         <li class = "nav-item px-2 py-2">
-                            <a class = "nav-link text-uppercase text-white rounded-pill" href = "membership.html">Membership</a>
+                        <a class = "nav-link text-uppercase text-white rounded-pill" href = "membership.html">Membership</a>
                         </li>
                         <li class = "nav-item px-2 py-2">
                             <a class = "nav-link text-uppercase text-white rounded-pill" href = "about-us.html">About us</a>
+                        </li>
+                        <li class = "nav-item px-2 py-2">
+                            <a class = "nav-link text-uppercase text-white rounded-pill" href = "contact_us.html">Contact us</a>
                         </li>
                     </ul>
                 </div>
@@ -67,44 +72,42 @@
             Catch the wind in your reading sails by choosing one best suited for you:</P>
         <div class="price-row">
             <div class="box">
-                <h2>Leve 1</h2>
-                <h1>Free</h1>
-                <h4><span>No Credit card Required</span></h4>
-                <pre> Access to a wide selection of </pre> 
-                <pre>songs,Standard audio quality </pre>
-                <pre> Offline listening, Exclusive </pre>
-                <pre> access to new releases</pre>
+                <h1>Level: Bronze</h!>
+                <h2><span>Buy at least 300$/year.</h2>
+                <pre> 5% discount on all items. </pre> 
+                <pre>Free shipping for orders from 100$. </pre>
+                <pre>Participate in members-only promotions </pre>
+                <pre> Earn redemption points</pre>
                 <div class="btn">Start Reading</div>
             </div>
             <div class="box">
-                <h2>Monthly Access</h2>
-                <h1>12.99$</h1>
-                <h4><span>Per Month</span></h4>
-                <pre> High-quality audio streaming</pre>
-                <pre> Ad-free experience</pre>
-                <pre> Offline listening</pre>
-                <pre>Unlimited skips and downloads</pre>
-                <div class="btn">Start Reading</div>
+                <h1>Level: Glod</h1>
+                    <h2><span>Buy at least 600$/year.</h2>
+                    <pre> 10% discount on all items. </pre> 
+                    <pre>Free shipping and express delivery for all orders. </pre>
+                    <pre>Priority to participate in events organized by the shop </pre>
+                    <pre> Participate in promotions exclusive to Silver members.</pre>
+                    <div class="btn">Start Reading</div>
             </div>
             <div class="box">
-                <h2>Lifetime Membership</h2>
-                <h1>199.99$</h1>
-                <h4><span>One-Time Payment</span></h4>
-                <pre>All features of Premium Plan, Up</pre>
-                <pre> to 5 family members</pre>
-                <pre>Personalized playlists for </pre>
-                <pre>each family member</pre>
-                <div class="btn">Start Reading</div>
+                <h1>Level: Gold</h1>
+                    <h2><span>Buy at least 1200$/year.</h2>
+                    <pre> 15% discount on all items. </pre> 
+                    <pre>Free shipping and express delivery for all orders</pre>
+                    <pre>Priority to participate in events organized by</pre>
+                        <pre> the shop and receive special gifts.</pre>
+                    <pre> Participate in promotions exclusive to Gold members.</pre>
+                    <div class="btn">Start Reading</div>
             </div>
         </div>
       </div>
     
-    <footer class = "bg-dark py-5">
+      <footer class = "bg-dark py-5">
         <div class = "container">
             <div class = "row text-white g-4">
                 <div class = "col-md-6 col-lg-3">
                     <a class = "text-uppercase text-decoration-none brand text-white" href = "index.html">Rhythm house</a>
-                    <p class = "text-white  mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum mollitia quisquam veniam odit cupiditate, ullam aut voluptas velit dolor ipsam?</p>
+                    <p class = "text-white  mt-3">Rhythm House-Where Passion for Vinyl Connects</p>
                 </div>
                 <div class = "col-md-6 col-lg-3">
                     <h5 class = "fw-light">Links</h5>
@@ -134,6 +137,11 @@
                                 <i class = "fas fa-chevron-right me-1"></i> About Us
                             </a>
                         </li>
+                        <li class = "my-3">
+                            <a href = "#" class = "text-white text-decoration-none">
+                                <i class = "fas fa-chevron-right me-1"></i> Contact Us
+                            </a>
+                        </li>
                     </ul>
                 </div>
                 <div class = "col-md-6 col-lg-3">
@@ -143,7 +151,7 @@
                             <i class = "fas fa-map-marked-alt"></i>
                         </span>
                         <span class = "fw-light">
-                        8A,Ton That Huyet,HaNoi
+                           8A,Ton That Huyet,HaNoi
                         </span>
                     </div>
                     <div class = "d-flex justify-content-start align-items-start my-2">
@@ -181,9 +189,9 @@
                 </div>
                 <hr class="mb-4">
                 <div class="row align-items-center">
-                <div class="text-center">
+                  <div class="text-center">
                     <p>Copyright @Group3</p>
-                </div>
+                  </div>
                 </div>
             </div>
         </div>
