--- a/thongtinsp.html
+++ b/thongtinsp.html
@@ -24,10 +24,12 @@
                     <button type = "button" class = " icon btn position-relative btn-outline-secondary">
                         <i class = "fa fa-search"></i>
                     </button>
-                    <button type = "button" class = " icon btn position-relative btn-outline-secondary ">
-                        <i class = "fa fa-shopping-cart"></i>
-                        <span class = "position-absolute top-0 start-100 translate-middle badge ">5</span>
-                    </button>
+
+                    <a href="cart.html">
+                        <button type = "button" class = "icon btn position-relative btn-outline-secondary">
+                            <i class = "fa fa-shopping-cart"></i>
+                        </button>
+                    </a>
                     <a href="login.html">
                         <button type = "button" class = "icon btn position-relative btn-outline-secondary">
                             <i class = "fa fa-user"></i>
@@ -52,10 +54,13 @@
                             <a class = "nav-link text-uppercase text-white rounded-pill" href = "ArtistList.html">Artist list</a>
                         </li>
                         <li class = "nav-item px-2 py-2">
-                            <a class = "nav-link text-uppercase text-white rounded-pill" href = "membership.html">Membership</a>
+                        <a class = "nav-link text-uppercase text-white rounded-pill" href = "membership.html">Membership</a>
                         </li>
                         <li class = "nav-item px-2 py-2">
                             <a class = "nav-link text-uppercase text-white rounded-pill" href = "about-us.html">About us</a>
+                        </li>
+                        <li class = "nav-item px-2 py-2">
+                            <a class = "nav-link text-uppercase text-white rounded-pill" href = "contact_us.html">Contact us</a>
                         </li>
                     </ul>
                 </div>
@@ -105,35 +110,37 @@
                                 <span>2023</span>
                             </div>
                             <div class="info-item">
-                                <label>Thể Loại:</label>
-                                <span>Folk, Pop, Việt Nam</span>
+                                <label>Category:</label>
+                                <span>	
+                                    Soundtrack</span>
                             </div>
                             <div class="info-item">
-                                <label>Màu Đĩa:</label>
-                                <span>Đen</span>
+                                <label>Disc Color:</label>
+                                <span>Black</span>
                             </div>
                             <div class="info-item">
-                                <label>Định Dạng:</label>
-                                <span>1xLP, Đĩa Than (Vinyl)</span>
+                                <label>Format:</label>
+                                <span>1xLP Vinyl</span>
                             </div>
                             <div class="info-item">
-                                <label>Hãng Phát Hành:</label>
-                                <span>Dihavina</span>
+                                <label>Publisher:</label>
+                                <span>	
+                                    AllTheAnime</span>
                             </div>
                             <div class="info-item">
-                                <label>Tình Trạng Đĩa:</label>
+                                <label>Disk status:</label>
                                 <span>M</span>
                                 </div>
                             <div class="info-item">
-                                <label>Tình Trạng Vỏ:</label>
+                                <label>Shell condition:</label>
                                 <span>M</span>
                             </div>
                             <div class="info-item">
-                                <label>Quốc Gia:</label>
-                                <span>Việt Nam</span>
+                                <label>Country:</label>
+                                <span>US</span>
                             </div>
                             <div class="info-item">
-                                <label>Năm Sản Xuất:</label>
+                                <label>Year of Manufacture:</label>
                                 <span>2024</span>
                             </div>
                         </hr>
@@ -141,39 +148,40 @@
                 </div>
                 <div class="song col-">
                         <table>
-                            <h2>Danh Sách</h2>
+                            <h2>TRACKLIST</h2>
                             <hr>
                                 <tr> 
                                     <th>1</th>
-                                    <td>Nhớ</td>
+                                    <td>Strix
+                                    </td>
                                 </tr>
                                 <tr>
                                     <th>2</th>
-                                    <td>Nuối Tiếc</td>
+                                    <td>Wise</td>
                                 </tr>
                                 <tr>
                                     <th>3</th>
-                                    <td>Mùa Thu Ru Em</td>
+                                    <td> Translent Calm</td>
                                 </tr>
                                 <tr>
                                     <th>4</th>
-                                    <td>Tiếng Mưa Đêm</td>
+                                    <td>Liar</td>
                                 </tr>
                                 <tr>
                                     <th>5</th>
-                                    <td>Nếu Xa Nhau</td>
+                                    <td>Crack Down</td>
                                 </tr>
                                 <tr>
                                     <th>6</th>
-                                    <td>Con Mưa Phùn</td>
+                                    <td>Bondman</td>
                                 </tr>
                                 <tr>
                                     <th>7</th>
-                                    <td>Quên Đi Tình Yêu Cũ</td>
+                                    <td>Commence</td>
                                 </tr>
                                 <tr>
                                     <th>8</th>
-                                    <td>Về Đây Em</td>
+                                    <td>Next Mission</td>
                                 </tr>
                              </hr>   
                         </table>
@@ -182,29 +190,29 @@
             <section id = "product" class = "py-5">
                 <div class = "container">
                     <div class = " py-4">
-                        <h3 class = "position-relative d-inline-block ms-4">SẢN PHẨM TƯƠNG TỰ</h3>
+                        <h3 class = "position-relative d-inline-block ms-4">SIMILAR PRODUCTS</h3>
                     </div>
                     <hr>
                         <div class = "row g-0">
                             <div class = "col-md-6 col-lg-4 col-xl-3 p-2">
                                 <div class = "product-img position-relative overflow-hidden">
-                                    <img src = "img/MOIV0029.jpg" class = "w-100" alt="">
+                                    <img src = "img/V0717_1.jpg" class = "w-100" alt="">
                                 </div>
                                 <div class = "text-center">
                                     <p class = "text-capitalize mt-3 mb-1">
-                                        SPIRITED AWAY SOUNDTRACK ALBUM</p>
-                                    <span class = "fw-bold d-block">$ 45.50</span>
+                                        DREAM DISCO</p>
+                                    <span class = "fw-bold d-block">$ 55.50</span>
                                     <a href = "#" class = "btn btn-primary mt-3">Add to Cart</a>
                                 </div>
                             </div>
                             <div class = "col-md-6 col-lg-4 col-xl-3 p-2">
                                 <div class = "product-img position-relative overflow-hidden">
-                                    <img src = "img/MOIV0029.jpg" class = "w-100" alt="">
+                                    <img src = "img/OTgtMzIyMi5qcGVn.jpeg" class = "w-100" alt="">
                                     <span class = "position-absolute bg-primary text-white d-flex align-items-center justify-content-center">sale</span>
                                 </div>
                                 <div class = "text-center">
                                     <p class = "text-capitalize mt-3 mb-1">
-                                        SPIRITED AWAY SOUNDTRACK ALBUM</p>
+                                        Hooked on Swing</p>
                                     <span class = "fw-bold d-block">$ 45.50</span>
                                     <a href = "#" class = "btn btn-primary mt-3">Add to Cart</a>
                                 </div>
@@ -238,96 +246,101 @@
             </section>
         </main>
         
-
-    <footer class = "bg-dark py-5">
-        <div class = "container">
-            <div class = "row text-white g-4">
-                <div class = "col-md-6 col-lg-3">
-                    <a class = "text-uppercase text-decoration-none brand text-white" href = "index.html">Rhythm house</a>
-                    <p class = "text-white  mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum mollitia quisquam veniam odit cupiditate, ullam aut voluptas velit dolor ipsam?</p>
-                </div>
-                <div class = "col-md-6 col-lg-3">
-                    <h5 class = "fw-light">Links</h5>
-                    <ul class = "list-unstyled">
-                        <li class = "my-3">
-                            <a href = "#" class = "text-white text-decoration-none">
-                                <i class = "fas fa-chevron-right me-1"></i> Home
-                            </a>
-                        </li>
-                        <li class = "my-3">
-                            <a href = "#" class = "text-white text-decoration-none t">
-                                <i class = "fas fa-chevron-right me-1"></i> Product
-                            </a>
-                        </li>
-                        <li class = "my-3">
-                            <a href = "#" class = "text-white text-decoration-none">
-                                <i class = "fas fa-chevron-right me-1"></i> Event
-                            </a>
-                        </li>
-                        <li class = "my-3">
-                            <a href = "#" class = "text-white text-decoration-none">
-                                <i class = "fas fa-chevron-right me-1"></i> Membership
-                            </a>
-                        </li>
-                        <li class = "my-3">
-                            <a href = "#" class = "text-white text-decoration-none">
-                                <i class = "fas fa-chevron-right me-1"></i> About Us
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-                <div class = "col-md-6 col-lg-3">
-                    <h5 class = "fw-light mb-3">Contact Us</h5>
-                    <div class = "d-flex justify-content-start align-items-start my-2">
-                        <span class = "me-3">
-                            <i class = "fas fa-map-marked-alt"></i>
-                        </span>
-                        <span class = "fw-light">
-                           8A,Ton That Huyet,HaNoi
-                        </span>
+        <footer class = "bg-dark py-5">
+            <div class = "container">
+                <div class = "row text-white g-4">
+                    <div class = "col-md-6 col-lg-3">
+                        <a class = "text-uppercase text-decoration-none brand text-white" href = "index.html">Rhythm house</a>
+                        <p class = "text-white  mt-3">Rhythm House-Where Passion for Vinyl Connects</p>
                     </div>
-                    <div class = "d-flex justify-content-start align-items-start my-2">
-                        <span class = "me-3">
-                            <i class = "fas fa-envelope"></i>
-                        </span>
-                        <span class = "fw-light">
-                            Rhythm.support@gmail.com
-                        </span>
-                    </div>
-                    <div class = "d-flex justify-content-start align-items-start my-2d">
-                        <span class = "me-3">
-                            <i class = "fas fa-phone-alt"></i>
-                        </span>
-                        <span class = "fw-light">
-                            +849999999
-                        </span>
-                    </div>
-                </div>
-                <div class = "col-md-6 col-lg-3">
-                    <h5 class = "fw-light mb-3">Follow Us</h5>
-                    <div>
-                        <ul class = "list-unstyled d-flex">
-                            <li>
-                                <a href = "#" class = "text-white text-decoration-none  fs-4 me-4"><i class = "fab fa-facebook-f"></i> </a>
+                    <div class = "col-md-6 col-lg-3">
+                        <h5 class = "fw-light">Links</h5>
+                        <ul class = "list-unstyled">
+                            <li class = "my-3">
+                                <a href = "#" class = "text-white text-decoration-none">
+                                    <i class = "fas fa-chevron-right me-1"></i> Home
+                                </a>
                             </li>
-                            <li>
-                                <a href = "#" class = "text-white text-decoration-none  fs-4 me-4"><i class = "fab fa-twitter"></i></a>
+                            <li class = "my-3">
+                                <a href = "#" class = "text-white text-decoration-none t">
+                                    <i class = "fas fa-chevron-right me-1"></i> Product
+                                </a>
                             </li>
-                            <li>
-                                <a href = "#" class = "text-white text-decoration-none fs-4 me-4"><i class = "fab fa-instagram"></i></a>
+                            <li class = "my-3">
+                                <a href = "#" class = "text-white text-decoration-none">
+                                    <i class = "fas fa-chevron-right me-1"></i> Event
+                                </a>
+                            </li>
+                            <li class = "my-3">
+                                <a href = "#" class = "text-white text-decoration-none">
+                                    <i class = "fas fa-chevron-right me-1"></i> Membership
+                                </a>
+                            </li>
+                            <li class = "my-3">
+                                <a href = "#" class = "text-white text-decoration-none">
+                                    <i class = "fas fa-chevron-right me-1"></i> About Us
+                                </a>
+                            </li>
+                            <li class = "my-3">
+                                <a href = "#" class = "text-white text-decoration-none">
+                                    <i class = "fas fa-chevron-right me-1"></i> Contact Us
+                                </a>
                             </li>
                         </ul>
                     </div>
-                </div>
-                <hr class="mb-4">
-                <div class="row align-items-center">
-                  <div class="text-center">
-                    <p>Copyright @Group3</p>
-                  </div>
+                    <div class = "col-md-6 col-lg-3">
+                        <h5 class = "fw-light mb-3">Contact Us</h5>
+                        <div class = "d-flex justify-content-start align-items-start my-2">
+                            <span class = "me-3">
+                                <i class = "fas fa-map-marked-alt"></i>
+                            </span>
+                            <span class = "fw-light">
+                               8A,Ton That Huyet,HaNoi
+                            </span>
+                        </div>
+                        <div class = "d-flex justify-content-start align-items-start my-2">
+                            <span class = "me-3">
+                                <i class = "fas fa-envelope"></i>
+                            </span>
+                            <span class = "fw-light">
+                                Rhythm.support@gmail.com
+                            </span>
+                        </div>
+                        <div class = "d-flex justify-content-start align-items-start my-2d">
+                            <span class = "me-3">
+                                <i class = "fas fa-phone-alt"></i>
+                            </span>
+                            <span class = "fw-light">
+                                +849999999
+                            </span>
+                        </div>
+                    </div>
+                    <div class = "col-md-6 col-lg-3">
+                        <h5 class = "fw-light mb-3">Follow Us</h5>
+                        <div>
+                            <ul class = "list-unstyled d-flex">
+                                <li>
+                                    <a href = "#" class = "text-white text-decoration-none  fs-4 me-4"><i class = "fab fa-facebook-f"></i> </a>
+                                </li>
+                                <li>
+                                    <a href = "#" class = "text-white text-decoration-none  fs-4 me-4"><i class = "fab fa-twitter"></i></a>
+                                </li>
+                                <li>
+                                    <a href = "#" class = "text-white text-decoration-none fs-4 me-4"><i class = "fab fa-instagram"></i></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <hr class="mb-4">
+                    <div class="row align-items-center">
+                      <div class="text-center">
+                        <p>Copyright @Group3</p>
+                      </div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </footer>
+        </footer>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 
 </html>
