--- a/cart.html
+++ b/cart.html
@@ -6,8 +6,64 @@
         <title>Record Store</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="Css/1.css"> 
+        <link rel="stylesheet" href="css/index.css"> 
+        </head>
+<body>
+  <header id = "header" class = "carousel slide" data-bs-ride = "carousel" style = "padding-top: 100px;">
+    <nav class = "navbar navbar-expand-lg bg-dark py-4 fixed-top">
+      <div class = "container">
+          <a class = "navbar-brand d-flex justify-content-between align-items-center order-lg-0" href = "index.html">
+              <img src="img/OIG2.jpg" alt="" style="width: 25px;">
+              <span class = "text-uppercase text-white fw-lighter ms-2">Rhythm House</span>
+          </a>
+
+          <div class = "order-lg-2 nav-btns">
+              <button type = "button" class = " icon btn position-relative btn-outline-secondary">
+                  <i class = "fa fa-search"></i>
+              </button>
+
+              <a href="cart.html">
+                  <button type = "button" class = "icon btn position-relative btn-outline-secondary">
+                      <i class = "fa fa-shopping-cart"></i>
+                  </button>
+              </a>
+              <a href="login.html">
+                  <button type = "button" class = "icon btn position-relative btn-outline-secondary">
+                      <i class = "fa fa-user"></i>
+                  </button>
+              </a>
+          </div>
+          <button class = "navbar-toggler border-0 bg-white" type = "button" data-bs-toggle = "collapse" data-bs-target = "#navMenu">
+              <span class = "navbar-toggler-icon"></span>
+          </button>
+          <div class = "collapse navbar-collapse order-lg-1" id = "navMenu">
+              <ul class = "navbar-nav mx-auto text-center">
+                  <li class = "nav-item px-2 py-2">
+                      <a class = "nav-link text-uppercase text-white rounded-pill" href = "index.html">Home</a>
+                  </li>
+                  <li class = "nav-item px-2 py-2">
+                      <a class = "nav-link text-uppercase text-white rounded-pill" href = "product.html">Product</a>
+                  </li>
+                  <li class = "nav-item px-2 py-2">
+                      <a class = "nav-link text-uppercase text-white rounded-pill" href = "event.html">Event</a>
+                  </li>
+                  <li class = "nav-item px-2 py-2">
+                      <a class = "nav-link text-uppercase text-white rounded-pill" href = "ArtistList.html">Artist list</a>
+                  </li>
+                  <li class = "nav-item px-2 py-2">
+                  <a class = "nav-link text-uppercase text-white rounded-pill" href = "membership.html">Membership</a>
+                  </li>
+                  <li class = "nav-item px-2 py-2">
+                      <a class = "nav-link text-uppercase text-white rounded-pill" href = "about-us.html">About us</a>
+                  </li>
+                  <li class = "nav-item px-2 py-2">
+                      <a class = "nav-link text-uppercase text-white rounded-pill" href = "contact_us.html">Contact us</a>
+                  </li>
+              </ul>
+          </div>
+      </div>
+  </nav>
+</header>
 <section class="h-100 h-custom">
   <div class="container h-100 py-5">
     <div class="row d-flex justify-content-center align-items-center h-100">
@@ -207,7 +263,7 @@
       <div class = "row text-white g-4">
           <div class = "col-md-6 col-lg-3">
               <a class = "text-uppercase text-decoration-none brand text-white" href = "index.html">Rhythm house</a>
-              <p class = "text-white  mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum mollitia quisquam veniam odit cupiditate, ullam aut voluptas velit dolor ipsam?</p>
+              <p class = "text-white  mt-3">Rhythm House-Where Passion for Vinyl Connects</p>
           </div>
           <div class = "col-md-6 col-lg-3">
               <h5 class = "fw-light">Links</h5>
@@ -229,7 +285,17 @@
                   </li>
                   <li class = "my-3">
                       <a href = "#" class = "text-white text-decoration-none">
+                          <i class = "fas fa-chevron-right me-1"></i> Membership
+                      </a>
+                  </li>
+                  <li class = "my-3">
+                      <a href = "#" class = "text-white text-decoration-none">
                           <i class = "fas fa-chevron-right me-1"></i> About Us
+                      </a>
+                  </li>
+                  <li class = "my-3">
+                      <a href = "#" class = "text-white text-decoration-none">
+                          <i class = "fas fa-chevron-right me-1"></i> Contact Us
                       </a>
                   </li>
               </ul>
@@ -286,5 +352,6 @@
       </div>
   </div>
 </footer>
-</head>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</body>
 </html>
